--- a/Test Nivelacion Backend/reactproyect/mi-app/src/App.css
+++ b/Test Nivelacion Backend/reactproyect/mi-app/src/App.css
@@ -9,7 +9,7 @@ html {
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
-  background-color: #e57373;
+  background-color: #ffffff;
 }
 
 .mySlides {
